minimizeDFA tutorial added, sidebar improvements

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				</div>
 				<h3 id="textTitleSidebar">Titel</h3>
 				<div class="table-container">
-					<table class="table table-bordered">
+					<table class="table table-bordered sidebar-table">
 						<tbody id="tableSidebar">
 						</tbody>
 					</table>
