Improved minimizeDFA tutorial

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</div>
 		
 		<div class="tutorial-bar container-fluid" id="tutorialBar">
-			<div class="tutorial-sidebar" id="tutorialSidebar">
+			<div class="tutorial-sidebar sidebar-small" id="tutorialSidebar">
 				<div class="tutorial-sidebar-handle bg-primary" id="tutorialSidebarHandle">
 					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 				</div>
