--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 		<title>FSuA-Vizualizer</title>
 		<meta charset= utf-8 />
 		
-		<link href="./style.css" rel="stylesheet" type="text/css">
-		
 		<!-- Main Scripts -->
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="./cytoscape.min.js"></script>
@@ -30,8 +28,9 @@
 		<!-- Clipboard Copy -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.16/clipboard.min.js"></script>
 		
-		<!-- THE script -->
+		<!-- THE script and CSS-->
 		<script src="./fsua-vizualizer.js"></script>
+		<link href="./style.css" rel="stylesheet" type="text/css">
 		
 	</head>
 	<body>
@@ -81,8 +80,9 @@
 			<button type="button" class="btn btn-info btn-lg" id="btnAnalyzeGraph">
 				Graph analysieren
 			</button>
-				
+			<!--
 			<button class="btn btn-default btn-lg" id="btnTest">Test!</button>
+			-->
 		</div>
 		
 		<div class="tutorial-bar container-fluid" id="tutorialBar">
@@ -100,12 +100,19 @@
 			</div>
 			<button type="button" class="close close-button" id="btnCloseTutorial" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 			<div class="row">
-				<div class="col-sm-2">
+				<div class="col-sm-4">
 					<div class="progress-text">
 						<span class="lead">Schritt: <span id="textCurrentProgress">X</span>/<span id="textMaxProgress">Y</span></span>
 					</div>
 				</div>
-				<div class="col-sm-8">
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="well well-sm tutorial-text" id="textTutorial"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
 					<div class="button-controls">
 						<button type="button" class="btn btn-default btn-lg" id="btnFirstStep">
 							<span class="glyphicon glyphicon-fast-backward" aria-hidden="true"></span>
@@ -126,13 +133,8 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12">
+				<div class="col-xs-12 progress-slider">
 					<input type="text" class="span2" value="" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-slider-id="sliderProgress" id="inputProgress" data-slider-tooltip="hide" data-slider-handle="round" />
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12">
-					<div class="well well-sm" id="textTutorial"></div>
 				</div>
 			</div>
 		</div>
